MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/Relix_KYC_Case__c.object-meta.xml
<CustomObject>
    <description>One Relix (Dalil) KYC case per buyer journey: the case id, what was sent, the journey status, the check results and the decision Salesforce took. Created by RelixKycService only (SCW-181, 25 Sep 2026). Holds no journey link, no raw responses, no identity images and no AML hit details.</description>
    <label>Relix KYC Case</label>
    <nameField>
        <displayFormat>RLX-{00000}</displayFormat>
        <label>Relix Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relix KYC Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>