MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Relix_KYC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>