MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Aml_Is_Match__c.field-meta.xml
<CustomField>
    <fullName>Aml_Is_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML Match</label>
    <type>Checkbox</type>
</CustomField>