MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Aml_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Aml_Risk_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AML Risk Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>