MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Analysis_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Flagged__c</fullName>
    <label>Document Analysis Flagged</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>