MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Analysis Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>