MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Buyer_Ref__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Ref__c</fullName>
    <description>The buyerRef sent to Relix (the Account or Contact Id).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Buyer Ref</label>
    <length>18</length>
    <type>Text</type>
</CustomField>