MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Callback_Received_At__c.field-meta.xml
<CustomField>
    <fullName>Callback_Received_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback Received At</label>
    <type>DateTime</type>
</CustomField>