MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Callback_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Callback_Token_Hash__c</fullName>
    <description>SHA-256 of the per-case token placed in the callback URL. The token itself is never stored.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Callback Token Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>