MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Case_Certificate_Ref__c.field-meta.xml
<CustomField>
    <fullName>Case_Certificate_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Certificate Ref</label>
    <length>120</length>
    <type>Text</type>
</CustomField>