MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>The caseId Relix returned. Blank until the create call succeeds.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Relix Case Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>