MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Company_Case__c.field-meta.xml
<CustomField>
    <fullName>Company_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On a POA case: the company case it belongs to.</description>
    <label>Company Case</label>
    <referenceTo>Relix_KYC_Case__c</referenceTo>
    <relationshipLabel>Company Case</relationshipLabel>
    <relationshipName>POA_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>