MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey Completed At</label>
    <type>DateTime</type>
</CustomField>