MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Consecutive_Failures__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Failures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Reads that failed in a row. Reset on a successful read. At 5 or more the case is read only every 6 hours and shows in the Stuck or erroring list.</description>
    <label>Consecutive Failures</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>