MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Consent_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Consent_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDPL Consent Accepted</label>
    <type>Checkbox</type>
</CustomField>