MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Power of Attorney contact for a company, or the person account contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact</relationshipLabel>
    <relationshipName>Relix_KYC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>