MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>What Salesforce concluded from the case. Relix itself gives no pass or fail.</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>PASSED</fullName>
            </value>
            <value>
                <fullName>NEEDS_REVIEW</fullName>
            </value>
            <value>
                <fullName>REFUSED</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>SUPERSEDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>