MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Details_Fetched_At__c.field-meta.xml
<CustomField>
    <fullName>Details_Fetched_At__c</fullName>
    <description>When the detail reads last completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Details Fetched At</label>
    <type>DateTime</type>
</CustomField>