MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Details_State__c.field-meta.xml
<CustomField>
    <fullName>Details_State__c</fullName>
    <description>Whether the detail reads (/buyer, /kyb, /aml, /sof, /analysis) and the document listing have been done. PENDING = ready but not yet fetched (the callout budget ran out); the next read fetches them.</description>
    <label>Details State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_READY</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>FETCHED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>