MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Document_Read_Passed__c.field-meta.xml
<CustomField>
    <fullName>Document_Read_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Read Passed</label>
    <type>Checkbox</type>
</CustomField>