MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Documents_Pending__c.field-meta.xml
<CustomField>
    <fullName>Documents_Pending__c</fullName>
    <description>Number of this case&apos;s Relix documents still waiting to be downloaded.</description>
    <label>Documents Pending</label>
    <summaryFilterItems>
        <field>Relix_KYC_Document__c.Status__c</field>
        <operation>equals</operation>
        <value>PENDING</value>
    </summaryFilterItems>
    <summaryForeignKey>Relix_KYC_Document__c.Relix_KYC_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>