MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Face_Matched__c.field-meta.xml
<CustomField>
    <fullName>Face_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Face Matched</label>
    <type>Checkbox</type>
</CustomField>