MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Fetched_At__c.field-meta.xml
<CustomField>
    <fullName>Fetched_At__c</fullName>
    <description>fetchedAt of the newest Relix response applied to this row. Older responses are ignored.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fetched At</label>
    <type>DateTime</type>
</CustomField>