MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Fields_Written_At__c.field-meta.xml
<CustomField>
    <fullName>Fields_Written_At__c</fullName>
    <description>When the identity write-back (RelixWriteBackService) last wrote the buyer record. Audit trail.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fields Written At</label>
    <type>DateTime</type>
</CustomField>