MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Identity_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Identity_Nationality__c</fullName>
    <description>The 3 letter nationality code from the identity record, kept only to compare with the Salesforce nationality.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Identity Nationality Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>