MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Identity_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identity Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>