MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Kyb_Verified__c.field-meta.xml
<CustomField>
    <fullName>Kyb_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYB Verified</label>
    <type>Checkbox</type>
</CustomField>