MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Last_Error_Ref__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Ref__c</fullName>
    <description>Relix errorRef to quote to Dalil support.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Error Ref</label>
    <length>40</length>
    <type>Text</type>
</CustomField>