MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Last_Http_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Http_Status__c</fullName>
    <label>Last HTTP Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>