MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Last_Read_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Read_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Read At</label>
    <type>DateTime</type>
</CustomField>