MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Link_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Link_Expires_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link Expires At</label>
    <type>DateTime</type>
</CustomField>