MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Liveness_Passed__c.field-meta.xml
<CustomField>
    <fullName>Liveness_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liveness Passed</label>
    <type>Checkbox</type>
</CustomField>