MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Notification_Failure__c.field-meta.xml
<CustomField>
    <fullName>Notification_Failure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Failure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>