MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Relix_KYC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>