MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDIVIDUAL_UAE_GCC</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL_EXPAT</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL_NON_RESIDENT</fullName>
            </value>
            <value>
                <fullName>CORPORATE_ENTITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>