MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Property_Ref__c.field-meta.xml
<CustomField>
    <fullName>Property_Ref__c</fullName>
    <description>The propertyRef sent to Relix (unit name).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>