MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Rate_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Rate_Remaining__c</fullName>
    <label>Rate Limit Remaining</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>