MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Read_Due__c.field-meta.xml
<CustomField>
    <fullName>Read_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Due</label>
    <type>Checkbox</type>
</CustomField>