MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Ready_Since__c.field-meta.xml
<CustomField>
    <fullName>Ready_Since__c</fullName>
    <description>First read that saw COMPLETED or REQUIRES_ATTENTION. Drives the RELIX_NOT_READY_HOURS cut-off.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ready Since</label>
    <type>DateTime</type>
</CustomField>