MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Relix_Persona__c.field-meta.xml
<CustomField>
    <fullName>Relix_Persona__c</fullName>
    <description>The persona Relix says it opened the case under (its persona on create, personaType on every read). When it differs from Persona__c the wrong journey ran and the pass rule sends the case to review. Added SCW-182.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Persona Opened by Relix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>