MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Relix_Status__c.field-meta.xml
<CustomField>
    <fullName>Relix_Status__c</fullName>
    <description>caseStatus as Relix reports it: STARTED, IN_PROGRESS, SUBMITTED, PREPARING_RESULT, REQUIRES_ATTENTION, COMPLETED.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relix Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>