MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Request_Key__c.field-meta.xml
<CustomField>
    <fullName>Request_Key__c</fullName>
    <description>Random key minted before the create call so a retried job can recognise its own row.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>