MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>