MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Whose KYC this case is: a person buyer, the company itself, or the company POA.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>