MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Send_State__c.field-meta.xml
<CustomField>
    <fullName>Send_State__c</fullName>
    <description>SENDING until the create call answers. SEND_UNCERTAIN means Relix may have created the case but we did not get the answer.</description>
    <label>Send State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SENDING</fullName>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>SEND_FAILED</fullName>
            </value>
            <value>
                <fullName>SEND_UNCERTAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>