MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Sof_Headline__c.field-meta.xml
<CustomField>
    <fullName>Sof_Headline__c</fullName>
    <description>Headline of the source-of-funds assessment (GET /sof), only when it was fetched.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SOF Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>