MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Sof_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Sof_Verdict__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source of Funds Verdict</label>
    <length>20</length>
    <type>Text</type>
</CustomField>