MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey Submitted At</label>
    <type>DateTime</type>
</CustomField>