MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/fields/Superseded_By__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The later case that replaced this one after a resend.</description>
    <label>Superseded By</label>
    <referenceTo>Relix_KYC_Case__c</referenceTo>
    <relationshipLabel>Superseded By</relationshipLabel>
    <relationshipName>Superseded_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>