MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/listViews/Needs_Review.listView-meta.xml
<ListView>
    <fullName>Needs_Review</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Persona__c</columns>
    <columns>Rep_Status__c</columns>
    <columns>Relix_Status__c</columns>
    <columns>Link_Sent_At__c</columns>
    <columns>Last_Read_At__c</columns>
    <columns>Review_Reason__c</columns>
    <columns>Last_Error_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>NEEDS_REVIEW</value>
    </filters>
    <label>Needs review</label>
</ListView>