MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/listViews/Open_Relix_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Relix_Cases</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Persona__c</columns>
    <columns>Rep_Status__c</columns>
    <columns>Relix_Status__c</columns>
    <columns>Link_Sent_At__c</columns>
    <columns>Last_Read_At__c</columns>
    <columns>Review_Reason__c</columns>
    <columns>Last_Error_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>OPEN</value>
    </filters>
    <label>Open Relix cases</label>
</ListView>