MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Case__c/listViews/Stuck_Or_Erroring.listView-meta.xml
<ListView>
    <fullName>Stuck_Or_Erroring</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <columns>Persona__c</columns>
    <columns>Rep_Status__c</columns>
    <columns>Relix_Status__c</columns>
    <columns>Link_Sent_At__c</columns>
    <columns>Last_Read_At__c</columns>
    <columns>Review_Reason__c</columns>
    <columns>Last_Error_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Send_State__c</field>
        <operation>equals</operation>
        <value>SEND_UNCERTAIN,SEND_FAILED</value>
    </filters>
    <filters>
        <field>Consecutive_Failures__c</field>
        <operation>greaterOrEqual</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Details_State__c</field>
        <operation>equals</operation>
        <value>FAILED</value>
    </filters>
    <label>Stuck or erroring</label>
</ListView>